--- a/TapMenu/app/src/main/res/layout/activity_maps.xml
+++ b/TapMenu/app/src/main/res/layout/activity_maps.xml
@@ -20,6 +20,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true" />
 
+    <FrameLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
     <TextView
         android:id="@+id/stringText"
         android:layout_width="wrap_content"
